# recce

./: .gitignore  .zshrc  BUILD_LOG.md  PRD.md  README.md  WEEK1_READING.md  WRITEUP_v2.md  pyproject.toml
evals/: create_dataset.py  judge.py  langsmith_eval.py  rubric.md  run_evals.py
examples/tableau-pulse/: draft.md  scout_notes.md
src/recce/: cli.py  critic.py  reviser.py  scout.py  writer.py
src/recce.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
